Add list elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -6,9 +6,17 @@
     <body>
       <h1>My first webpage</h1>
       <h2>Guided by Moringa School</h2>
-      
+
       <p>Hello world!</p>
       <p>Welcome to my first webpage</p>
+
+      <p>Here are some of the things I will learn;</p>
+      <ul>
+        <li>HTML</li>
+        <Li>CSS</Li>
+        <li>Java Script</li>
+        <li>And a lot more</li>
+      </ul>
     </body>
 
 </html>
