Add inline elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,10 +5,10 @@
   </head>
     <body>
       <h1>My first webpage</h1>
-      <h2>Guided by Moringa School</h2>
+      <h2>Guided by <em>Moringa School</em></h2>
 
       <p>Hello world!</p>
-      <p>Welcome to my first webpage</p>
+      <p>Welcome to my <strong>first webpage!</strong></p>
 
       <p>Here are some of the things I will learn;</p>
       <ul>
@@ -18,5 +18,7 @@
         <li>And a lot more</li>
       </ul>
     </body>
-
+    <p>Check Out <a href = "http://moringaschool.com/">Moringa School.</a> It is a great place to learn web development skills!</p>
+    <p>Here is a link to my <a href = 'my-favorite-things.html'> Favourite Things</a></p>
+    <img src = 'Images/elephant.jpg' alt='An Elephant'>
 </html>
