Add inline elements

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -18,6 +18,8 @@
       <li>Beans</li>
       <li>Potatoes</li>
     </ol>
+    <img src = 'Images/rice.jpg' alt ='Rice'> <img src ='Images/nyama choma.jpg' alt="Nyama Choma">
+    <img src ='Images/beans.jpg' alt = 'Beans'> <img src = 'Images/potatoes.jpg' alt = 'Potatoes'>
     <p>I love my family very much and I can say they are my best friends. I can't think of better friends than my family</p>
     <p>Rice is my favourite food. I love preparing different delicasies of rice like Pilau,
       vegetable rice, plain rice, coconut rice
