--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Favourite Things</title>
+    <link href="CSS/styles.css" rel="stylesheet" type="text/css">
     </head>
   <body>
     <h1>My Favourite friends</h1>
